# SigML

./: .gitignore  README.md  all_gxs.pkl  atoms_fingerprints.pkl  create_fingerprints.py  dataset.py  dlr_testing.py  full_sig_test.py  nn_test.py  nn_test_simple.py  pyproject.toml  sig_lib.py  test_fullsig_model.py  test_model.py  train_dlr.py  xg_boost_test.py
DLR_Test/: dlr_testing.py
Data/: all_gxs.pkl  atoms_energies_fenergies.pkl  fullsig_cnn.pth  simple_cnn.pth
Direct_CNN/: sig_lib.py  test_fullsig.py  train_fullsig.py
E3NN_Test/: BasicNetwork.py  test.py
Pred_EF_NEQUIP/: ase_test.py  example.yaml  fplib3.py  sig_lib.py  test.extxyz  train.extxyz  write_extxyz.py
Pred_Ef/: atoms_fingerprints.pkl  create_fingerprints.py  sig_lib.py  siginf_ann.pth  train_ef_model.py
Pred_Sinf/: atoms_fingerprints.pkl  create_fingerprints.py  gen_sinf.py  sig_lib.py  siginf_ann.pth  siginf_ann_2.pth  siginf_ann_combined.pth  test_data.pkl  test_data_combined.pkl  test_sinf_model.py  test_sinf_model_combined.py  train_sinf_model.py  train_sinf_model_combined.py
Pred_Tail_Fit/: atoms_lmbtrs.pkl  atoms_predsigs.pkl  atoms_soaps.pkl  gen_sigs.py  sig_lib.py  tailfit_fcnn.pth  test_tailfit.py  train_tailfit.py  val_dataloader.pkl  val_dataset.pkl
Tests/: predict_ef_compare.py  test_leg_rep.py
docs/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  search.js  searchindex.js  sigml.html  sigml.models.html  sigml.utils.html  tutorial.html  usage.html
fp_gen/: fplib3.py  fplib3_pure.py
src/: EF_Model.py  Sig_iws_Model.py  Sinf_Model.py  (+6 more)
(+124 files in other folders)
